   * Fix "Shuffle sides" incorrect behaviour: children inside [side] were also
     swapped.
   * Fixed incorrect image path function name in error messages generated by
     using ~CROP() with negative coordinates.
   * Fixed abilities sometimes affecting self during movement even when they are
     flagged as not affecting self (bug #20755).
 * Miscellaneous and bug fixes
   * Fixed minor issue with Drake Clasher animations
   * Added a new playlist FULL_MUSIC_PLAYLIST, which contains all Wesnoth tracks
     in alphabetical order
   * Added -Wno-null-conversion to the CMake pedantic flags.
   * Changed: Decreased the pango cairo dependency to version 1.21.3.
   * Changed: Mark system headers as system headers in CMake.
   * Fixed the recall list sometimes getting confused when dismissing a recall.
   * Prevent unchecked memory access in cut_surface()

Version 1.11.4:
 * AI:
   * Reverted new Lua AI persistent storage mechanism for external CAs that
     would crash Wesnoth under certain circumstances in 1.11.3. This will be
     re-committed in an upcoming release.
   * Micro AIs
     * Healer Support MAI now respects RCA AI [avoid] aspect.

Version 1.11.3:
 * AI:
   * Micro AIs
     * New Goto and Zone Guardian MAIs
     * Change SUF/SLF names to [filter]/[filter_location] and variants thereof
     * Add optional SUF to Healer Support MAI
 * Campaigns:
   * Descend into Darkness:
     * Fix the surviving orc leader starting poisoned after scenario 5.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Indonesian, Italian, Polish,
     Portuguese, Russian, Vietnamese
 * User interface:
   * Fixed 'end turn' button's state in MP and title2 issues.
   * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
     text box overflow occurs.
   * Change Difficulty checkbox in Load Game dialog in GUI1 gets disabled if
     change in difficulty of a loading game won't take effect (bug #20381).