@@ -1113,6 +1113,9 @@
         comment = "2012 Google Code-in Students' Micro AI development"
     [/entry]
     [entry]
+        name = "Mateusz Kolaczek (PL_kolek)"
+    [/entry]
+    [entry]
         name = "Matthias Schoeck (mattsc)"
         comment = "AI improvements"
     [/entry]
