@@ -45,6 +45,8 @@ Version 1.11.4+dev:
      using ~CROP() with negative coordinates.
    * Fixed abilities sometimes affecting self during movement even when they are
      flagged as not affecting self (bug #20755).
+   * Added deprecation messages to aspects [target], [protect_unit], [protect_location],
+     protect_leader=, protect_leader_radius=
  * Miscellaneous and bug fixes
    * Fixed minor issue with Drake Clasher animations
    * Added a new playlist FULL_MUSIC_PLAYLIST, which contains all Wesnoth tracks
